# un-igov

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml
.beads/: issues.jsonl
.beads/export-state/: 506a70c7af2facac.json
.github/workflows/: pages.yml  scrape.yml
data/ga/c1/79/: proposals.json
data/ga/c1/80/: proposals.json
data/ga/c2/79/: proposals.json
data/ga/c2/80/: proposals.json
data/ga/c3/79/: proposals.json
data/ga/c3/80/: proposals.json
data/ga/c4/79/: proposals.json
data/ga/c4/80/: proposals.json
data/ga/c5/79/: proposals.json
data/ga/c5/80/: proposals.json
data/ga/c6/78/: proposals.json
data/ga/c6/79/: proposals.json
data/ga/c6/80/: proposals.json
data/ga/plenary/78/: agenda.json  decisions.json
data/ga/plenary/79/: agenda.json  decisions.json
data/ga/plenary/80/: agenda.json  (+2 more)
docs/: ui-ux-analysis.md
output/: index.html
output/static/css/: un-design-system.css
src/unigov/: __init__.py  cli.py  config.py
src/unigov.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/unigov/generator/: __init__.py  builder.py  renderer.py
src/unigov/scraper/: __init__.py  igov.py
static/css/: style.css  un-design-system.css
templates/: agenda.html  base.html  committee.html  conference.html  decisions.html  documents.html  ecosoc_body.html  ga_plenary.html  index.html  list_meetings.html  list_table.html  macros.html  meeting.html  meetings.html  procedure_steps.yaml  proposals.html  session.html
templates/partials/: footer-links.html  footer.html  nav.html  navbar.html
(+130 files in other folders)
