[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unigov"
version = "0.1.0"
description = "Static site generator for UN iGov data"
requires-python = ">=3.9"
authors = [
  {name = "UN iGov Static Team"}
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "rich>=13.0"
]

[project.scripts]
unigov = "unigov.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
